[tool.poetry]
name = "raspycar"
version = "0.1.0"
description = "Server app to remote control the car"
authors = ["Vincent Rialland <vincent.rialland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
starlette = "^0.13.2"
jinja2 = "^2.11.1"
uvicorn = "^0.11.3"
requests = "^2.23.0"
aiofiles = "^0.4.0"
gpiozero = "^1.5.1"
"rpi.gpio" = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
isort = "^4.3.21"
pyquery = "^1.4.1"
pytest-mock = "^3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
